# server/resources/views/prevision_actuals/show_fields.blade.php
@@ -22,3 +22,33 @@
     <p>{!! $previsionActual->Persona_id !!}</p>
 </div>
 
+<!-- Activado Field -->
+<div class="form-group">
+    {!! Form::label('activado', 'Activado:') !!}
+    <p>{!! $previsionActual->activado !!}</p>
+</div>
+
+<!-- Remember Token Field -->
+<div class="form-group">
+    {!! Form::label('remember_token', 'Remember Token:') !!}
+    <p>{!! $previsionActual->remember_token !!}</p>
+</div>
+
+<!-- Created At Field -->
+<div class="form-group">
+    {!! Form::label('created_at', 'Created At:') !!}
+    <p>{!! $previsionActual->created_at !!}</p>
+</div>
+
+<!-- Updated At Field -->
+<div class="form-group">
+    {!! Form::label('updated_at', 'Updated At:') !!}
+    <p>{!! $previsionActual->updated_at !!}</p>
+</div>
+
+<!-- Deleted At Field -->
+<div class="form-group">
+    {!! Form::label('deleted_at', 'Deleted At:') !!}
+    <p>{!! $previsionActual->deleted_at !!}</p>
+</div>
+
